# UB-NSSD

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.archive/: whisper_at_analysis_compare_hz_8v16.py
.archive/whisper-at/: infer.py  wer.py  whisper-at_eating_sounds.py
.archive/yamnet/: __main__.py  train_yamnet.py
_archive/: whisper_at_combination.py
datasets/: README.md  all_data.csv  classes.csv  food_intake_data.csv  foods_data.csv  get_eating_sound_data.py  get_food_intake_dataset.py  manual_data.csv  manually_annotated.json  to16bit.py
datasets/google_audioset/: README.md  download_audioset_script.py  google_audioset.json
outputs/: all.csv  only_intake.csv  only_manual.csv  whisper_at_analysis.csv  yamnet_analysis.csv  yamnet_food_intake_analysis.csv
src/: __main__.py  classes.csv  download_data.py  download_manual.py  download_yt.py  infer.py  line_graph.py  preprocess.py  result.py  splice_audio.py  train.py  train_yamnet.py  training.py  transcribe.py  utils.py  visualize.py  wer.py  whisper_at_analysis.py
