[project]
name = "ub_nssd"
version = "0.1.0"
description = "Non-Sound Speech Detection (NSSD) Team for UB Voice."
authors = [
  { name = "ok-nick", email = "nick.libraries@gmail.com" },
  { name = "korliu", email = "koreyliu1221@gmail.com" },
]
dependencies = [
  'numba',
  'numpy',
  'torch',
  'torchaudio',
  'librosa',
  'tqdm',
  'more-itertools',
  'tiktoken == 0.3.3',
  'pandas',
  'pytube',
  'matplotlib',
  'requests',
  'torcheval',
  'tensorflow',
  'tensorflow_hub',
  'tensorflow_io',
  'IPython'
]

[tool.pyright]
# typeCheckingMode = "basic"

[tool.ruff]
# fixable = ["ALL"]
# select = ["ALL"]
# ignore = ["ERA001"]

[tool.black]
