[project]
name = "ub_nssd"
version = "0.1.0"
description = "Non-Sound Speech Detection (NSSD) Team for UB Voice."
authors = [
  { name = "ok-nick", email = "nick.libraries@gmail.com" },
  { name = "korliu", email = "koreyliu1221@gmail.com" },
]
requires-python = ">3.11.4" # has only been tested on this version
dependencies = [
  'numpy',
  'torch',
  'torchaudio',
  'librosa',
  'more-itertools',
  'pandas',
  'pytube',
  'matplotlib',
  # 'requests',
  'tensorflow == 2.13.0', # tensorflow-io doesn't support 2.14.0+ yet
  'tensorflow_hub',
  'tensorflow_io',
  'IPython',
  'soundfile',
]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
# fixable = ["ALL"]
# select = ["ALL"]
# ignore = ["ERA001"]

[tool.black]
